nav bar width fixed
nav bar width was longer than other components causing a horizontal scroll on smaller screens

--- a/home css/nav_bar.css
+++ b/home css/nav_bar.css
@@ -6,7 +6,6 @@
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
   color: black;
   padding: 1rem 2rem; /* Increased padding for more spacing around the navbar */
-  width: 100%;
   border-bottom: 2px solid #ddd; /* Add bottom border for more definition */
 }
 
